fix: letter-spacing

--- a/index.css
+++ b/index.css
@@ -4,30 +4,23 @@
 body {
     margin: 0;
     background-color: rgb(0, 0, 0);
-
-    min-width: fit-content;
 }
 
 article {
-    display: block;
-    padding: 20px 10px;
-    min-width: 1600px;
+    padding: 20px 20px;
 }
 
 p {
-    max-width: 100%;
-    width: 100%;
     margin: 0;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: baseline;
-    /* flex-grow: 2; */
 
     font-family: Helvetica, sans-serif;
     font-weight: 600;
-    font-size: 7.2rem;
+    font-size: 7vw;
     color: white;
+    white-space: nowrap;
 }
 article > p:first-child {
     margin-left: 0;
@@ -37,10 +30,10 @@ span {
     display: block;
     margin: 0 15px;
     background-color: gray;
-    height: 60px;
+    height: 3.5vw;
     flex-grow: 1;
 
-    overflow: hidden;
+    /* overflow: hidden; */
     clip-path: inset(0 0 0 0);
 }
 
@@ -65,19 +58,20 @@ span::before {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    z-index: -1;
-    clip-path: inset(0 0 0 0);
+    /* z-index: -1; */
+    /* clip-path: inset(0 0 0 0); */
 }
 @media screen and (max-width: 820px){
     article {
         display: block;
-        padding: 20px 10px;
-        min-width: 820px;
+        box-sizing: border-box;
+        padding: 20px 5px;
     } 
     p {
-        font-size: 6rem;
+        font-size: 11.7vw;
     }
     span {
-        height: 50px;
+        height: 6vw;
+        margin: 0 10px;
     }
 }
